--- a/Client/index.html
+++ b/Client/index.html
@@ -69,10 +69,10 @@
 			<p id ="qdesc";></p>
 			<p id ="edesc";></p>
 			<p id ="rdesc";></p>
-		</body>
+		</body >
 
 	<div id="gameDiv">
-		<canvas id="myCanvas" width="960" height="540" style = "border:5px solid #000000" ></canvas>
+		<canvas id="myCanvas" width="980" height="540" style = "border:3px solid grey;background-color:#d3d3d3;" ></canvas>
 	</div>
 
 	<script src = "https://cdn.socket.io/socket.io-1.4.5.js"></script>
