--- a/Client/index.html
+++ b/Client/index.html
@@ -78,7 +78,7 @@
 	<script src = "https://cdn.socket.io/socket.io-1.4.5.js"></script>
 
 	<script>
-		var socket = io ();
+		var socket = io ('https://multiplayer-game-1.herokuapp.com/');
 		var canvas = document.getElementById ("myCanvas");
 		var ctx = canvas.getContext ("2d");
 		
